--- a/pg_inicial.html
+++ b/pg_inicial.html
@@ -15,7 +15,7 @@
     <header class="cabecalho">
         <a href="https://x.com/Wuthering_Waves"><img src="" alt="twitter"></a>
         <a href="#"><img src="" alt="Sua Conta"></a> <!--Leva para outra página que vamos desenvolver ainda-->
-        <a href="https://wutheringwaves.kurogames.com/en/"><img src="" alt="WuWa Logo"></a>
+        <a href="pg_inicial.html"><img src="" alt="WuWa Logo"></a> <!--Leva para outra página que vamos desenvolver ainda-->
         <a href="#"><img src="" alt="Resonadores"></a> <!--Leva para outra página que vamos desenvolver ainda-->
         <a href="#"><img src="" alt="Itens"></a> <!--Leva para outra página que vamos desenvolver ainda-->
     </header>
